generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id              Int        @id @default(autoincrement())
  name            String
  last_name       String
  email           String     @unique
  password        String
  confirmed_email Boolean?   @default(false)
  role            String?    @default("user") // admin
  created_at      DateTime   @default(now())
  products        Product[]
  orders          Order[]
  Payments        Payments[]

  subscriptionPlan   SubscriptionPlan? @relation(fields: [subscriptionPlanId], references: [id])
  subscriptionPlanId Int?
}

// model UsersPlans 

model SubscriptionPlan {
  id          Int      @id @default(autoincrement())
  name        String // basico, premium, gold
  description String
  price       Float // 
  created_at  DateTime @default(now())

  users User[]
}

model Category {
  id          Int      @id @default(autoincrement())
  name        String
  description String
  created_at  DateTime @default(now())

  products ProductCategory[]
}

model Product {
  id          Int     @id @default(autoincrement())
  name        String
  price       Float
  description String?
  stock       Int?    @default(0)
  image       String?
  slug        String? @unique @default(cuid())
  authorId    Int
  author      User    @relation(fields: [authorId], references: [id])

  created_at DateTime @default(now())

  categories ProductCategory[]

  orders Order[]
}

model ProductCategory {
  id Int @id @default(autoincrement())

  productId Int
  product   Product @relation(fields: [productId], references: [id])

  categoryId Int
  category   Category @relation(fields: [categoryId], references: [id])
}

model Payments {
  id     Int   @id @default(autoincrement())
  total  Float
  user   User  @relation(fields: [userId], references: [id])
  userId Int

  order   Order @relation(fields: [orderId], references: [id])
  orderId Int

  created_at DateTime @default(now())
}

model Order {
  id         Int      @id @default(autoincrement())
  total      Float
  user       User     @relation(fields: [userId], references: [id])
  userId     Int
  created_at DateTime @default(now())

  products Product[]
  payments Payments[]
}
